tests/spec/compile-fail/152_const_generic_unstable_value.zn
// category: compile-fail
// profile: hosted
// purpose: const generic identities must have stable structural fingerprints

module tests.fail.constGenericUnstableValue;

struct Bad<const Name: String> { // expected-error: const generic parameter type String has no stable structural fingerprint
    value: USize,
}
